# sound_player

./: Cargo.toml  README.md  index.html  tauri.conf.json
css/: style.css
css/templates/: dark.css
js/: main.js
src/: main.rs
