[package]
name = "soundplyr"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "macros", "time"] }

[build-dependencies]
tauri-build = { version = "1", features = [] }
